# DR-Calculator

./: .gitignore  CMakeLists.txt  DR Calculator.sln  README.md  dr_calculator.sln
DR Calculator/: DR Calculator.cpp  DR Calculator.vcxproj  DR Calculator.vcxproj.filters  ImpulseGen.cpp  ImpulseGen.h  Loudness.cpp  Loudness.h  WaveLoader.cpp  WaveLoader.h  main.cpp
dr_calculator/: Filter_Coeffs.txt  main.cpp  readme.md  sampleText.txt
include/dr_calculator/: ImpulseGen.h  WaveLoader.h  impulse_generator.h  loudness.h  optional.h  wave_loader.h
include/dr_calculator/components/: chunk.h  wave.h
src/: WaveLoader.cpp  impulse_generator.cpp  wave_loader.cpp
